# Experiments

./: .gitignore  README.md  pyproject.toml
Projects/NMF/25_10_30/: pyproject.toml
Projects/NMF/25_10_30_NMF_components/: README.md  plotting.ipynb  pyproject.toml
Projects/NMF/Experiment_1/: config.toml  experiment.py  requirements.txt  run_experiment.sh
Projects/NMF/Experiment_1/results/: metadata.json
Projects/Testing/sample_experiment_1/: main.py  pyproject.toml
Projects/feature_prediction/25_11_17_test_experiment/: main.py  pyproject.toml
Projects/label_transfer/2025_11_10/: pyproject.toml
Projects/spatial_transcriptomics_integration/: pyproject.toml
Projects/spatial_transcriptomics_integration/feature_prediction/: main.py  postprocessing.py  pyproject.toml
Projects/spatial_transcriptomics_integration/feature_prediction/25_11_17_test_experiment/: README.md  main.py  pyproject.toml  test.ipynb
Projects/spatial_transcriptomics_integration/feature_prediction/src/feature_prediction/: __init__.py  _datasets.py  _label_transfer.py  _predictors.py  _strategies.py  _typing.py  utils.py
Projects/spatial_transcriptomics_integration/feature_prediction/src/feature_prediction/experiments/: __init__.py  _experiment_one.py
Projects/spatial_transcriptomics_integration/label_transfer/: README.md  main.py  pyproject.toml
Projects/spatial_transcriptomics_integration/label_transfer/2025_11_10/: README.md  main.py  methods.py  pyproject.toml  typing.py  utils.py
Projects/spatial_transcriptomics_integration/label_transfer/notebooks/: plotting.ipynb
Projects/spatial_transcriptomics_integration/label_transfer/src/label_transfer/: __init__.py  datasets.py  methods.py  typing.py  utils.py
Projects/spatial_transcriptomics_integration/src/spatial_transcriptomics_integration/: __init__.py  dataloaders.py  predictor_functions.py  utils.py
Projects/spatial_transcriptomics_integration/src/spatial_transcriptomics_integration/experiments/: __init__.py  feature_prediction.py  label_transfer.py
Projects/spatial_transcriptomics_integration/tests/: test_experiments_init.py
