[project]
name = "spatial-transcriptomics-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "egerc", email = "eger.christian@gmx.de" }
]
requires-python = ">=3.13"
dependencies = [
    "exp-runner @ git+https://github.com/egerc/exp-runner.git@d373db50d3f605908a27562dd9e094085205fd38",
    "nico2-lib @ git+https://github.com/gruenlab/bioinfo-tools.git@1bea5cb96df57fa0f846c0a3d4dbb31f4bf7c1b5#subdirectory=applications/nico2_lib",
    "ipykernel>=7.1.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "scikit-misc>=0.5.2",
    "tangram-sc>=1.0.4",
    "anndata>=0.12.7",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
