[project]
name = "25-10-30"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exp-runner",
    "ipykernel>=7.1.0",
    "scanpy>=1.11.5",
    "scikit-learn>=1.7.2",
    "scikit-misc>=0.5.1",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
exp-runner = { git = "https://github.com/egerc/exp-runner.git", rev = "de935f2996fdb3ee7e2098ccd17aa93c21d9eec0" }
