[project]
name = "25-10-30-nmf-components"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exp-runner",
    "scanpy>=1.11.5",
    "scikit-learn>=1.7.2",
    "scikit-misc>=0.5.1",
]

[tool.uv.sources]
exp-runner = { git = "https://github.com/egerc/exp-runner.git", rev = "de935f2996fdb3ee7e2098ccd17aa93c21d9eec0" }
