[project]
name = "feature-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "egerc", email = "eger.christian@gmx.de" }
]
requires-python = ">=3.13"
dependencies = [
    "exp-runner @ git+https://github.com/egerc/exp-runner.git@d373db50d3f605908a27562dd9e094085205fd38",
    "nico2-lib @ git+https://github.com/gruenlab/bioinfo-tools.git@be14e3787fcf8501f95354c7b6ac8b1fdff6d1f3#subdirectory=applications/nico2_lib",
    "ipykernel>=7.1.0",
    "ipykernel>=7.1.0",
    "ipython>=9.8.0",
    "scikit-misc>=0.5.2",
    "tacco>=0.4.0.post1",
]


[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
