[project]
name = "label-transfer"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exp-runner",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "nico-tutorial",
    "nico2-lib",
    "scvi-tools>=1.4.0.post1",
    "tangram-sc>=1.0.4",
]

[tool.uv.sources]
nico-tutorial = { git = "https://github.com/gruenlab/nico_tutorial.git", rev = "10de2a5d3ba65bda894f95fbfe3d3f9a1c7527c8" }
exp-runner = { git = "https://github.com/egerc/exp-runner.git", rev = "15f4a6eb949af00618b01f2fd4f962d5b936ef76" }
nico2-lib = { git = "https://github.com/gruenlab/bioinfo-tools.git", subdirectory = "applications/nico2_lib", rev = "dc69f2f5ad6ef41b57ad485b97052b328b4ab1cd" }

[tool.setuptools.packages.find]
where = ["src"]
